# capsule

./: .gitignore  CHANGELOG.md  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml  demo.yml  release.yml
capsule/: __init__.py  cli.py  interpose.py  policy.py  profile.py  trap.py
capsule/hosts/: __init__.py  claude_code.py
docs/: demo.tape
examples/profiles/: network-deny.yaml  readonly.yaml
examples/skills/curl-exfil-demo/: SKILL.md
tests/: test_cli.py  test_interpose.py  test_policy.py
